compiler/e2e/test/snapshot/symbol/root_conflict/snapshot.snap
---
source: compiler/e2e/test/snapshot/mod.rs
expression: clean_run
---
stderr:
error: the module declaration ened up loading the current file `compiler/e2e/test/snapshot/symbol/root_conflict/main.pnx`
  ╭─ compiler/e2e/test/snapshot/symbol/root_conflict/main.pnx:3:15
  │
3 │ public module main
  │               ^^^^ this module declaration causes recursive loading
  │
  = try changing the module name from `main` to something else that is not the same as the file name

error: Compilation aborted due to 1 error(s)



stdout:
